k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "Access-Control-Allow-Origin: $http_origin";

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/users
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/lodge
            backend:
              service:
                name: lodging-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /api/reservation
            backend:
              service:
                name: reservation-service
                port:
                  number: 8082
          - pathType: Prefix
            path: /api/notifications
            backend:
              service:
                name: notification-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /api/rating
            backend:
              service:
                name: rating-service
                port:
                  number: 8083
          - pathType: Prefix
            path:  '/?(.*)'
            backend:
              service:
                name: fe-service
                port:
                  number: 4200
